# eldrow

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  best_pairs.json  counts.json  dumb_words.txt  eldrow.py  killed.txt  main.py  main.sh  other.txt  play  played.json  played.jsonl  pyproject.toml  sols.txt  test_eldrow.py
eldrow/: auto_limit.py  colors.py  constrain.py  dbm_cache.py  elimination.py  explore.py  formatting.py  game.py  ipython_cli.py  memoize.py  multi.py  parse.py  scoring.py  shark_scarf.py  words.py
scripts/: inspect_elims.py
termo/: words.txt
