[tool.poetry]
name = "eldrow"
version = "0.1.0"
description = ""
authors = ["Peter Gaultney <petergaultney@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
ipython = "^8.0"
isort = "^5.12.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 105

[tool.mypy]
python_version = 3.8
mypy_path = "eldrow"
namespace_packages = true
explicit_package_bases = true
exclude = '''(?x)(
    build/
    | dist/
    | \S+\.egg-info/
)'''
check_untyped_defs = true
