[project]
name = "eldrow"
version = "0.1.0"
description = ""
authors = [{name="Peter Gaultney", email="petergaultney@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "ipython == 8.12.0",
    "sqlitedict == 2.1.0",
]

[project.optional-dependencies]
dev = [
    "mypy >= 1.3.0",
    "ipython == 8.12.0",
    "isort == 5.12.0",
    "black == 23.3.0",
    "pytest == 7.3.1",
]

[tool.black]
line-length = 105

[tool.isort]
profile = "black"
line_length = 105

[tool.mypy]
python_version = '3.11'
mypy_path = "eldrow"
exclude = '''(?x)(
    build/
    | dist/
    | \S+\.egg-info/
)'''
check_untyped_defs = true
[[tool.mypy.overrides]]
module = ["sqlitedict"]
ignore_missing_imports = true
